Changelog
=========


1.4.1 (unreleased)
------------------

- Nothing changed yet.


1.4 (2012-10-16)
----------------

- Improved meeting item css and markup.
  [Julian Infanger]

- Fix translation (vcal -> ical).
  [mathias.leimgruber]

- Move start/end date after title.
  [mathias.leimgruber]

- Only auto-fill end_date if end_date is no set.
  [mathias.leimgruber]


1.3.8 (2012-08-20)
------------------

- Disable setting default page for Meeting and MeetingItem.
  Those types are not normal folders and setting the default page is therefore not common.
  [jone]

- Remove base_view from allowed Meeting views.
  [jone]


1.3.7 (2012-06-21)
------------------

- Task PDF: increase width of status column.
  [jone]


1.3.6 (2012-06-13)
------------------

- PDF: Fix newlines in task listing table.
  [jone]

- PDF: Support contacts or other objects as responsibility of tasks.
  [jone]


1.3.5 (2012-06-11)
------------------

- Meeting item PDF: escape urls of related items, so that spaces (%) do not break LaTeX.
  [jone]

- Meeting item: remove some css-classes for fixing bad styling when there are nested tables.
  [jone]


1.3.3 (2012-05-09)
------------------

- Improve LaTeX PDF layout and German translation.
  [jone]

- Fix handler for meeting item reorder.
  [mathias.leimgruber]

- Add task listing when tasks from ftw.task are referenced.
  [jone]

- Fix generating ical data if user doesn't exists
  [mathias.leimgruber]

- Try to prevend Outlook from always creating new calendars
  [mathias.leimgruber]

- Fix getAttendeesOrUsers index, so that it indexes users of all fields.
  [jone]

- Fix encoding problem in meeting latex view.
  [jone]


1.3.2 (2012-04-23)
------------------

- Export ICS: show attendees.
  [Julian Infanger]

- Show location in meeting view.
  [Julian Infanger]

- Added zcml-condition for ICSAttachmentCreator adapter.
  [Julian Infanger]


1.3.1 (2012-03-26)
------------------
