@@ -1,4 +1,6 @@
 from AccessControl import ClassSecurityInfo
+from DateTime import DateTime
+from Products.ATContentTypes import ATCTMessageFactory as atct_mf
 from Products.ATContentTypes.content import folder
 from Products.ATContentTypes.lib.calendarsupport import CalendarSupportMixin
 from Products.ATReferenceBrowserWidget import ATReferenceBrowserWidget
@@ -215,6 +217,45 @@ class Meeting(folder.ATFolder, CalendarSupportMixin):
 
     portal_type = "Meeting"
     schema = MeetingSchema
+
+    # copyed from Products.ATContentTypes.content.event.ATEvent
+    security.declareProtected(permissions.View, 'post_validate')
+    def post_validate(self, REQUEST=None, errors=None):
+        """Validates start and end date
+
+        End date must be after start date
+        """
+        if 'start_date' in errors or 'end_date' in errors:
+            # No point in validating bad input
+            return
+
+        rstartDate = REQUEST.get('start_date', None)
+        rendDate = REQUEST.get('end_date', None)
+
+        if rendDate:
+            try:
+                end = DateTime(rendDate)
+            except:
+                errors['end_date'] = atct_mf(u'error_invalid_end_date',
+                                      default=u'End date is not valid.')
+        else:
+            end = self.end()
+        if rstartDate:
+            try:
+                start = DateTime(rstartDate)
+            except:
+                errors['start_date'] = _(u'error_invalid_start_date',
+                                        default=u'Start date is not valid.')
+        else:
+            start = self.start()
+
+        if 'start_date' in errors or 'end_date' in errors:
+            # No point in validating bad input
+            return
+
+        if start > end:
+            errors['end_date'] = atct_mf(u'error_end_must_be_after_start_date',
+                                  default=u'End date must be after start date.')
 
     def getAttendeesVocabulary(self):
         """Workaround for DatagridField SelectColumn
