@@ -4,7 +4,7 @@ from zope.configuration import xmlconfig
 from plone.app.testing import PloneSandboxLayer
 from plone.app.testing import applyProfile
 from plone.app.testing import PLONE_FIXTURE
-from plone.app.testing import IntegrationTesting
+from plone.app.testing import IntegrationTesting, FunctionalTesting
 from plone.testing import z2
 
 
@@ -71,5 +71,7 @@ class FtwMeetingLayer(PloneSandboxLayer):
 FTW_MEETING_FIXTURE = FtwMeetingLayer()
 FTW_MEETING_INTEGRATION_TESTING = IntegrationTesting(
     bases=(FTW_MEETING_FIXTURE,), name="FtwMeeting:Integration")
+FTW_MEETING_FUNCTIONAL_TESTING = FunctionalTesting(
+    bases=(FTW_MEETING_FIXTURE,), name="FtwMeeting:functional")
 
 LATEX_ZCML_LAYER = LatexZCMLLayer()
